--- a/pet-foster-connect/src/App.css
+++ b/pet-foster-connect/src/App.css
@@ -234,6 +234,22 @@ footer {
   object-fit: cover;
 }
 
+/* animal container and detail pages' smooth animation */
+.fade-in {
+  animation: fadeInUp 0.6s ease forwards;
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 /* ===== MEDIA QUERIES ===== */
 /* small devices */
 @media (min-width: 576px) {
