--- a/pet-foster-connect/src/styles/base.css
+++ b/pet-foster-connect/src/styles/base.css
@@ -2,16 +2,22 @@
 body {
   background-color: var(--light-cream);
   color: var(--dark-blue);
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16px;
   line-height: 1.5;
+}
+
+.container-global {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 /* Typo */
 h2.text-center.mb-4.fw-bold.text-primary {
   font-size: 1.8rem;
   color: var(--medium-blue) !important;
-  padding-bottom: .5rem;
+  padding-bottom: 0.5rem;
   font-weight: 700;
 }
 
