--- a/pet-foster-connect/src/App.css
+++ b/pet-foster-connect/src/App.css
@@ -117,7 +117,7 @@ main {
 }
 
 /* title for animals section */
-main h1 {
+main h1, h3 {
   color: var(--medium-blue);
   font-weight: 700;
   margin-bottom: 1.5rem;
@@ -169,7 +169,7 @@ main h1 {
 
 .card-title {
   font-size: 2rem;
-  color: var(--medium-blue);
+  color: var(--dark-blue);
   font-weight: 700;
 }
 
