--- a/frontend/src/styles/base.css
+++ b/frontend/src/styles/base.css
@@ -7,6 +7,24 @@ body {
   line-height: 1.5;
 }
 
+.main-container-border {
+  border: 1px solid var(--medium-blue) !important;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  background-color: var(--light-cream);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.text-primary-red {
+  color: var(--primary-red);
+  font-weight: 600;
+}
+
+.text-medium-blue {
+  color: var(--medium-blue);
+  font-weight: 600;
+}
+
 .container-global {
   min-height: 100vh;
   display: grid;
@@ -14,11 +32,13 @@ body {
 }
 
 /* Typo */
-h2.text-center.mb-4.fw-bold.text-primary {
+.section-title {
   font-size: 1.8rem;
-  color: var(--medium-blue) !important;
+  color: var(--medium-blue);
   padding-bottom: 0.5rem;
   font-weight: 700;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 .card-text {
@@ -28,8 +48,10 @@ h2.text-center.mb-4.fw-bold.text-primary {
 }
 
 .fade-in {
+  opacity: 0;
   animation: fadeInUp 0.6s ease forwards;
 }
+
 
 @keyframes fadeInUp {
   0% {
