--- a/frontend/src/styles/buttons.css
+++ b/frontend/src/styles/buttons.css
@@ -1,4 +1,3 @@
-/* Boutons personnalisés */
 .btn {
   border-radius: .3rem;
   font-weight: 500;
@@ -6,7 +5,7 @@
 }
 
 .btn-primary {
-  background-color: var(--medium-blue);
+  background-color: var(--dark-blue);
   color: var(--light-cream);
   border: none;
   font-size: 0.9rem;
@@ -27,13 +26,23 @@
   color: var(--light-cream);
 }
 
-/* Autres boutons */
+.custom-inscription-btn {
+  background-color: var(--dark-blue);
+  color: var(--light-cream);
+  font-size: 1rem;
+}
+
+.custom-inscription-btn:hover {
+  background-color: var(--medium-blue-2);
+  color: var(--light-cream);
+}
+
 .btn-outline-primary {
-  border-color: var(--primary-red);
-  color: var(--primary-red);
+  border-color: var(--dark-blue);
+  color: var(--dark-blue);
 }
 
 .btn-outline-primary:hover {
-  background-color: var(--primary-red);
+  background-color: var(--dark-blue);
   color: white;
 }
