--- a/frontend/src/styles/footer.css
+++ b/frontend/src/styles/footer.css
@@ -1,7 +1,7 @@
 footer {
   background-color: var(--dark-blue);
   color: var(--light-cream);
-  padding: 1.5rem 0;
+  padding: 1.5rem 1rem;
   font-size: 0.9rem;
 }
 
@@ -18,4 +18,9 @@ footer {
   color: var(--light-blue);
   background-color: var(--grey);
   border-radius: .3rem;
+}
+
+.footer-navbar ul {
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
