Fixed: sign up button background color

--- a/frontend/src/styles/buttons.css
+++ b/frontend/src/styles/buttons.css
@@ -27,7 +27,7 @@
 }
 
 .custom-inscription-btn {
-  background-color: var(--dark-blue);
+  background-color: var(--medium-blue);
   color: var(--light-cream);
   font-size: 1rem;
 }
