--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   --primary-red: #E75561;
-  --light-cream: #FBFCF4;
+  --light-grey: #f7f9fc;
   --light-blue: #C4EEEF;
   --medium-blue: #488EBA;
   --medium-blue-2: #3b779c;
