--- a/frontend/src/styles/buttons.css
+++ b/frontend/src/styles/buttons.css
@@ -1,6 +1,6 @@
 :root {
   --primary-red: #E75561;
-  --light-cream: #FBFCF4;
+  --light-grey: #FBFCF4;
   --light-blue: #C4EEEF;
   --medium-blue: #488EBA;
   --medium-blue-2: #3b779c;
@@ -46,7 +46,7 @@
 
 .btn-primary {
   background-color: var(--dark-blue);
-  color: var(--light-cream);
+  color: var(--light-grey);
   border: none;
 }
 
@@ -54,7 +54,7 @@
 .btn-primary:focus,
 .btn-primary:active {
   background-color: var(--medium-blue-2);
-  color: var(--light-cream);
+  color: var(--light-grey);
 }
 
 
@@ -83,7 +83,7 @@
 
 .btn-foster-request {
   background-color: var(--medium-blue-2);
-  color: var(--light-cream);
+  color: var(--light-grey);
   font-size: 1rem;
   border: none;
 }
@@ -92,7 +92,7 @@
 .btn-foster-request:focus,
 .btn-foster-request:active {
   background-color: var(--medium-blue-2);
-  color: var(--light-cream);
+  color: var(--light-grey);
 }
 
 /* ------------------------ */
@@ -101,7 +101,7 @@
 
 .custom-inscription-btn {
   background-color: var(--medium-blue);
-  color: var(--light-cream);
+  color: var(--light-grey);
   font-size: 1rem;
   border: none;
 }
@@ -110,7 +110,7 @@
 .custom-inscription-btn:focus,
 .custom-inscription-btn:active {
   background-color: var(--medium-blue-2);
-  color: var(--light-cream);
+  color: var(--light-grey);
 }
 
 /* ------------------------ */
@@ -119,7 +119,7 @@
 
 .logout-btn {
   background-color: var(--primary-red);
-  color: var(--light-cream);
+  color: var(--light-grey);
   font-size: 1rem;
   border: none;
 }
@@ -128,7 +128,7 @@
 .logout-btn:focus,
 .logout-btn:active {
   background-color: var(--primary-red);
-  color: var(--light-cream);
+  color: var(--light-grey);
 }
 
 /* ------------------------ */
@@ -149,5 +149,5 @@
 /* style spécifique pour le bouton de demande d'accueil */
 .btn-foster-request:disabled {
   background-color: var(--medium-blue-2);
-  color: var(--light-cream);
+  color: var(--light-grey);
 }
