--- a/frontend/src/styles/cards.css
+++ b/frontend/src/styles/cards.css
@@ -20,7 +20,7 @@
 
 /* Home text presentation */
 .main-container-custom {
-  background-color: var(--light-cream);
+  background-color: var(--light-grey);
   border-radius: 1rem; 
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   padding: 2rem;
@@ -52,7 +52,7 @@
 }
 
 .card-body-standard {
-  background-color: var(--light-cream);
+  background-color: var(--light-grey);
   font-size: 1.2rem;
   font-weight: 500;
   color: var(--dark-blue);
@@ -85,7 +85,7 @@
 
 .association-card {
   padding: 1.2rem;
-  background-color: var(--light-cream);
+  background-color: var(--light-grey);
   border-bottom: 1px solid var(--dark-blue);
   color: var(--dark-blue);
   font-weight: 500;
@@ -100,9 +100,4 @@
 .info-card,
 .foster-request-card {
   background-color: #f7f9fc; 
-}
-
-.info-card:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
