--- a/frontend/src/styles/base.css
+++ b/frontend/src/styles/base.css
@@ -11,6 +11,7 @@ body {
   font-weight: 600;
   letter-spacing: 0.5px;
   white-space: nowrap;
+  color: var(--primary-red);
 }
 
 .main-container-border {
