--- a/frontend/src/styles/responsive.css
+++ b/frontend/src/styles/responsive.css
@@ -1,13 +1,17 @@
 /* Responsive styles */
 @media (max-width: 380px) {
-  .brand-text {
+  .brand-text-header {
     display: none;
   }
 }
 
-@media (min-width: 576px) {
+@media (max-width: 576px) {
   body {
     font-size: 16px;
+  }
+  
+  .brand-text-header {
+    display: none;
   }
   
   .navbar-brand {
