--- a/frontend/src/styles/cards.css
+++ b/frontend/src/styles/cards.css
@@ -19,9 +19,16 @@
 }
 
 /* Home text presentation */
+.container-title {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: var(--dark-blue);
+  margin-top: 1rem;
+}
+
 .main-container-custom {
   background-color: var(--light-cream);
-  border-radius: 1rem; 
+  border-radius: .5rem; 
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   padding: 2rem;
 }
