--- a/frontend/src/styles/cards.css
+++ b/frontend/src/styles/cards.css
@@ -65,7 +65,7 @@
 }
 
 .card-body-standard {
-  background-color: var(--light-cream);
+  background-color: white;
   font-size: 1.2rem;
   font-weight: 500;
   color: var(--dark-blue);
