--- a/frontend/src/styles/base.css
+++ b/frontend/src/styles/base.css
@@ -1,6 +1,6 @@
 /* Base styles */
 body {
-  background-color: white;
+  background-color: var(--background);
   color: var(--dark-blue);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16px;
@@ -14,27 +14,16 @@ body {
   color: var(--primary-red);
 }
 
-.main-container-border {
-  border: 1px solid var(--medium-blue) !important;
-  border-radius: 0.5rem;
-  padding: 1rem;
-  background-color: var(--light-cream);
-}
-
-.text-primary-red {
-  color: var(--primary-red);
-  font-weight: 600;
-}
-
-.text-medium-blue {
-  color: var(--medium-blue);
-  font-weight: 600;
-}
-
 .container-global {
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
+}
+
+.card-body {
+  background-color: var(--light-blue);
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 /* Typo */
