--- a/frontend/src/styles/cards.css
+++ b/frontend/src/styles/cards.css
@@ -22,14 +22,14 @@
 .container-title {
   font-size: 1.5rem;
   font-weight: 600;
-  color: var(--dark-blue);
+  color: var(--light-cream);
   margin-top: 1rem;
   font-weight: 700;
 }
 
 .container-text {
   font-size: 1.2rem;
-  color: var(--dark-blue);
+  color: var(--light-cream);
   line-height: 1.6;
 }
 
