--- a/frontend/src/styles/base.css
+++ b/frontend/src/styles/base.css
@@ -21,7 +21,8 @@ body {
 }
 
 .card-body {
-  background-color: var(--dark-blue);
+  color: var(--dark-blue);
+  background-color: var(--light-cream);
   border-radius: 0.5rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -34,12 +35,6 @@ body {
   font-weight: 700;
   text-align: center;
   margin-bottom: 1rem;
-}
-
-.card-text {
-  font-size: 1rem;
-  color: var(--light-cream);
-  line-height: 1.6;
 }
 
 .fade-in {
