--- a/frontend/src/styles/cards.css
+++ b/frontend/src/styles/cards.css
@@ -55,10 +55,10 @@
 }
 
 .card-body-standard {
-  background-color: white;
   font-size: 1.2rem;
   font-weight: 500;
   color: var(--dark-blue);
+  margin: 2rem auto;
 }
 
 .animal-card {
