--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -1,6 +1,7 @@
 :root {
   --background: #f8f9fa;
   --primary-red: #E75561;
+  --secondary-red: #dd424f;
   --light-cream: #f7f9fc;
   --light-blue: #C4EEEF;
   --medium-blue: #488EBA;
