--- a/frontend/src/styles/buttons.css
+++ b/frontend/src/styles/buttons.css
@@ -22,7 +22,7 @@
   background-color: var(--medium-blue-2);
 }
 
-/* Variantes */
+/* Variants */
 .btn--foster,
 .btn--inscription {
   background-color: var(--medium-blue-2);
@@ -31,6 +31,11 @@
 
 .btn--logout {
   background-color: var(--primary-red);
+  color: var(--light-cream);
+}
+
+.btn--logout:hover {
+  background-color: var(--secondary-red);
   color: var(--light-cream);
 }
 
