--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -4,8 +4,8 @@
   --secondary-red: #dd424f;
   --light-cream: #f7f9fc;
   --light-blue: #C4EEEF;
-  --medium-blue: #488EBA;
-  --medium-blue-2: #3b779c;
+  --medium-blue: #71a6c8;
+  --medium-blue-2: #377195;
   --dark-blue: #203656;
   --grey: #FFFFFF26;
   --warning-bg: #fff3cd;
