--- a/frontend/src/styles/buttons.css
+++ b/frontend/src/styles/buttons.css
@@ -15,7 +15,7 @@
 
 .btn-primary {
   background-color: var(--medium-blue);
-  color: var(--light-cream);
+  color: var(--dark-blue);
 }
 
 .btn-primary:hover {
